--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.username=root
 
 # Senha do banco de dados
 spring.datasource.password=docker
+
+spring.mvc.hiddenmethod.filter.enabled=true
