--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,1 @@
-# Altera a estrutura da tabela caso a entidade tenha mudanças.
-spring.jpa.hibernate.ddl-auto=update
-
-# Acesso ao banco de dados
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3308/tjw
-
-# Usuário do banco de dados
-spring.datasource.username=root
-
-# Senha do banco de dados
-spring.datasource.password=docker
-
-spring.mvc.hiddenmethod.filter.enabled=true
+spring.profiles.active=${ACTIVE_APP:dev}
